k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmixdummy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jmixdummy
  template:
    metadata:
      labels:
        app: jmixdummy
    spec:
      imagePullSecrets:
        - name: custom-docker-dev-secret
      containers:
        - image: custom-docker-dev.haulmont.com/projects/bulychevid/jmixdummy
          imagePullPolicy: Always
          name: jmixdummy
          lifecycle:
            preStop:
              exec:
                command: [ "sh", "-c", "sleep 10" ]
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
            - containerPort: 5701
              name: hazel
              protocol: TCP
---

apiVersion: v1
kind: Service
metadata:
  name: jmixdummy-service
spec:
  type: NodePort
  ports:
    - port: 8080
      name: jmixdummy-app
      protocol: TCP
      targetPort: http
  selector:
    app: jmixdummy
