k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jmixdummy-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "persistent"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
spec:
  defaultBackend:
    service:
      name: jmixdummy-service
      port:
        number: 8080
  rules:
    #- host: jmixdummy.dstrmv.kube.haulmont.com
    - http:
        paths:
          - backend:
              service:
                name: jmixdummy-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
